Curve to Mesh Inverted Face Normals #91119

Closed
opened 2021-09-01 22:38:50 +02:00 by Erindale · 6 comments

System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.68

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-08-26 20:00, hash: 2b64b4d90d
Worked: (newest version of Blender that worked as expected)

Short description of error
When using the Curve to Mesh node sometime the Profile Curve needs to be reversed for normals to face outwards.
Surely the node should automatically output faces pointing out?
Reversed normals is the default behaviour when using the curve primitive as the profile.

Exact steps for others to reproduce the error
Add a curve. Add a Curve to Mesh node. Add a circle curve primitive, and use it as the profile. Inspect face orientation.

2021-09-01 21-33-15.mp4

normalBug.blend

**System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2070 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.68 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-08-26 20:00, hash: `2b64b4d90d` Worked: (newest version of Blender that worked as expected) **Short description of error** When using the Curve to Mesh node sometime the Profile Curve needs to be reversed for normals to face outwards. Surely the node should automatically output faces pointing out? Reversed normals is the default behaviour when using the curve primitive as the profile. **Exact steps for others to reproduce the error** Add a curve. Add a Curve to Mesh node. Add a circle curve primitive, and use it as the profile. Inspect face orientation. | [2021-09-01 21-33-15.mp4](https://archive.blender.org/developer/F10361418/2021-09-01_21-33-15.mp4) | | -- | [normalBug.blend](https://archive.blender.org/developer/F10361419/normalBug.blend)
Author

Added subscriber: @Erindale

Added subscriber: @Erindale
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Heh, I thought I fixed this in my commit closing #89687, but apparently I didn't think it through so well. It will depend on the direction of the primitive, so when I fixed it for the star node I guess I broke it for the circle node.

It's probably best to revert that and instead fix the direction of the star primitive (and any other cyclic circle primitive).

Heh, I thought I fixed this in my commit closing #89687, but apparently I didn't think it through so well. It will depend on the direction of the primitive, so when I fixed it for the star node I guess I broke it for the circle node. It's probably best to revert that and instead fix the direction of the star primitive (and any other cyclic circle primitive).

This issue was referenced by 716682365c

This issue was referenced by 716682365c6bcc1b5f757232ce1d2499b0d062a9
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Hans Goudey self-assigned this 2021-09-03 23:50:06 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91119
No description provided.